--- a/WCamera/Base.lproj/LaunchScreen.storyboard
+++ b/WCamera/Base.lproj/LaunchScreen.storyboard
@@ -18,21 +18,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WCamera" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXG-CO-ANn">
-                                <rect key="frame" x="87.5" y="293.5" width="200" height="100"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXG-CO-ANn">
+                                <rect key="frame" x="151.5" y="328.5" width="72" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="Lro-zX-DWa"/>
-                                    <constraint firstAttribute="width" constant="200" id="xm5-Og-FMt"/>
+                                    <constraint firstAttribute="height" constant="30" id="Lro-zX-DWa"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2jn-gd-8v4">
+                                <rect key="frame" x="137.5" y="288" width="100" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7rS-yP-Qfz"/>
+                                    <constraint firstAttribute="width" constant="100" id="CeQ-1I-0fD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="jXG-CO-ANn" firstAttribute="firstBaseline" secondItem="2jn-gd-8v4" secondAttribute="baseline" constant="32" symbolType="layoutAnchor" id="36q-2R-1i2"/>
                             <constraint firstItem="jXG-CO-ANn" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="5cU-US-JIC"/>
                             <constraint firstItem="jXG-CO-ANn" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="RcH-Rw-Aso"/>
+                            <constraint firstItem="2jn-gd-8v4" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="k9J-w4-8pP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
