--- a/WCamera/LaunchScreen.storyboard
+++ b/WCamera/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pFq-Ya-3PT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zcm-Ci-2FU">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,33 +11,33 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="SaA-vS-XKB">
+        <scene sceneID="Hgh-h3-lel">
             <objects>
-                <viewController id="pFq-Ya-3PT" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="h2b-yb-YKY">
+                <viewController id="Zcm-Ci-2FU" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xB7-sr-Xm6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbu-bg-NSU">
-                                <rect key="frame" x="0.0" y="44" width="150" height="150"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKE-Bt-PlL">
+                                <rect key="frame" x="157" y="403" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="1Xc-sm-TVy"/>
-                                    <constraint firstAttribute="height" constant="150" id="q73-UN-M3W"/>
+                                    <constraint firstAttribute="height" constant="100" id="cJB-bf-wCG"/>
+                                    <constraint firstAttribute="width" constant="100" id="tjv-mr-Zj9"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Fbu-bg-NSU" firstAttribute="leading" secondItem="nw9-5V-B6f" secondAttribute="leading" id="UQv-jr-ZXV"/>
-                            <constraint firstItem="Fbu-bg-NSU" firstAttribute="top" secondItem="nw9-5V-B6f" secondAttribute="top" id="tlt-CM-f2z"/>
+                            <constraint firstItem="oKE-Bt-PlL" firstAttribute="centerX" secondItem="YRW-Ov-Dsq" secondAttribute="centerX" id="8X3-Xj-P96"/>
+                            <constraint firstItem="oKE-Bt-PlL" firstAttribute="centerY" secondItem="YRW-Ov-Dsq" secondAttribute="centerY" id="lQe-RF-cMq"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="nw9-5V-B6f"/>
+                        <viewLayoutGuide key="safeArea" id="YRW-Ov-Dsq"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aRZ-Vz-ezY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xSD-9d-Og2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
